<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <ToggleButton
            android:id="@+id/pg13Toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all_PG13_movies"
            android:checked="false"
            android:textOff="@string/show_all_movies_with_this_rating"
            android:textOn="@string/show_movies_of_all_ratings" />

    <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" />
</LinearLayout>